[package]
name = "redis-cell-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
redis = { version = "0.32.7", default-features = false }

[dev-dependencies]
testcontainers = { version = "0.25.0", features = ["reusable-containers"] }
tokio = { version = "1.48.0", features = ["macros"] }
redis = { version = "0.32.7", features = ["connection-manager", "tokio-comp"] }
