[package]
name = "redis-cell-rs"
version = "0.2.1-rc.0"
edition = "2021"
authors = ["Pavel Mikhalkevich <pavel@mikhalkevich.com>"]
license = "MIT OR Apache-2.0"
description = "Rust bindings for the Redis Cell module"
repository = "https://github.com/rustworthy/redis-cell-rs.git"
keywords = ["Valkey", "Redis", "Redis-Cell", "GCRA", "Rate-Limit"]
categories = ["api-bindings", "network-programming"]
exclude = [
  ".github",
  "redis.Dockerfile",
  "valkey.Dockerfile",
  ".gitignore",
  "Makefile",
]

[features]
uuid = ["dep:uuid", "redis/uuid"]

[dependencies]
redis = { version = "0.32.7", default-features = false }

# optional dependencies
uuid = { version = "1.18.1", optional = true }

[dev-dependencies]
testcontainers = { version = "0.25.0", features = ["reusable-containers"] }
tokio = { version = "1.48.0", features = ["macros"] }
redis = { version = "0.32.7", features = ["connection-manager", "tokio-comp"] }
