[package]
name = "redis-cell-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_builder = "0.20.2"
redis = { version = "0.32.7", features = ["connection-manager", "tokio-comp"] }
thiserror = "2.0.17"

[dev-dependencies]
testcontainers = { version = "0.25.0", features = ["reusable-containers"] }
tokio = { version = "1.48.0", features = ["macros"] }
